--- a/hackathonvolunteer-certificates-305nov2025-sb.html
+++ b/hackathonvolunteer-certificates-305nov2025-sb.html
@@ -181,7 +181,7 @@
   <main class="container">
     <!-- CERTIFICATE GENERATOR -->
     <section class="surface" id="certificate-generator">
-      <h2 class="card-title" style="text-align:center">GENERATE YOUR CERTIFICATE • 305 Hackathon Edition Nov 2025 Session B/h2>
+      <h2 class="card-title" style="text-align:center">GENERATE YOUR CERTIFICATE • 305 Hackathon Edition Nov 2025 Session B </h2>
       <p class="card-description" style="text-align:center">[ OFFICIAL CERTIFICATE ] — Download your volunteer certificate using your registered email address</p>
 
       <label for="certificateEmailInput" class="sr-only">Registered email address</label>
