--- a/hackuniversity-hackwinners.html
+++ b/hackuniversity-hackwinners.html
@@ -251,39 +251,55 @@ table student winners */
         Select your event to access the correct certificates.
       </p>
 
-      <div class="portal-grid">
+
+            <div class="portal-grid"></div>
+        <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners-2025DEC-CODEFEST-SA.html">
+          <span>💪 CodeFest Edition: Dec 2025 Session A  (Online/Synchronous)</span>
+          <small>Winners & Student Volunteer Certificates</small>
+        </a>
+
+      <div class="portal-grid"></div>
+        <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners-2025DEC-CODEFEST-SB.html">
+          <span>⚡ CodeFest Edition: Dec 2025 Session B (In-Person)</span>
+          <small>Winners & Student Volunteer Certificates</small>
+        </a>
 
 
+      <div class="portal-grid"></div>
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners-305nov2025-sa.html">
-          <span>💪 305 Hackathon Edition Nov'25 Session A  (Online/Synchronous) — Fall 2025</span>
+          <span>💪 305 Hackathon Edition Nov'25 Session A  (Online/Synchronous)</span>
           <small>Winners & Student Volunteer Certificates</small>
         </a>
 
+      <div class="portal-grid"></div>
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners-305nov2025-sb.html">
-          <span>⚡ 305 Hackathon Edition Nov'25 Session B (In-Person) — Fall 2025</span>
+          <span>⚡ 305 Hackathon Edition Nov'25 Session B (In-Person)</span>
           <small>Winners & Student Volunteer Certificates</small>
         </a>
 
 
 
-
+      <div class="portal-grid"></div>
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners-empowher2025-sa.html">
           <span>💪 EmpowHer Hackathon 2025 Session A (Online/Synchronous) — Fall 2025</span>
           <small>Winners & Student Volunteer Certificates</small>
           <!-- <small>COMMING SOON [Review Devpost for winners] - Winners & Student Volunteer Certificates</small> -->
         </a>
 
+              <div class="portal-grid"></div>
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners-empowher2025-sb.html">
           <span>⚡ EmpowHer Hackathon 2025 Session B (In-Person) — Fall 2025</span>
           <small>Winners & Student Volunteer Certificates</small>
         </a>
 
 
+      <div class="portal-grid"></div>
         <a class="portal-btn" href="#">
           <span>🏆 305 Hackathon Edition — Sep 2025</span>
           <small>COMMING SOON [Review Devpost for winners] - Winners & Student Volunteer Certificates</small>
         </a>
 
+      <div class="portal-grid"></div>
         <a class="portal-btn" href="#">
           <span>🏆 SummerCodeX — Summer 2025</span>
           <small>COMMING SOON [Review Devpost for winners] - Winners & Student Volunteer Certificates</small>
