--- a/hackathonvolunteer-certificates.html
+++ b/hackathonvolunteer-certificates.html
@@ -181,21 +181,21 @@
 
        <div class="portal-grid"></div>
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-certificates-codefest2025.html">
-          <span>CodeFest Edition: Dec 2025 — Session A & B</span>
+          <span>🏆 CodeFest Edition: Dec 2025 — Session A & B</span>
           <!-- <small>Open certificate portal soon - We are preparing it for you</small> -->
           <small>Open certificate portal</small>
         </a> 
 
          <div class="portal-grid"></div>
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-certificates-305nov2025-sb.html">
-          <span>305 Hackathon Edition Nov'25 Session B (In-Person 12hrs)</span>
+          <span>⚡ 305 Hackathon Edition Nov'25 Session B (In-Person 12hrs)</span>
           <!-- <small>Open certificate portal soon - We are preparing it for you</small> -->
           <small>Open certificate portal</small>
         </a> 
       
          <div class="portal-grid"></div>
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-certificates-305nov2025-sa.html">
-          <span>305 Hackathon Edition Nov'25 Session A (Online)</span>
+          <span>🏆 305 Hackathon Edition Nov'25 Session A (Online)</span>
           <!-- <small>Open certificate portal soon - We are preparing it for you</small> -->
           <small>Open certificate portal</small>
         </a> 
