--- a/home.html
+++ b/home.html
@@ -483,7 +483,7 @@
           <li class="flex items-start">
             <span class="h-2 w-2 cc-blue rounded-full mr-3 mt-2"></span>
             <span>
-              <strong>Hackathon registration</strong> and participation validation
+              <strong>Triathlon Registration — Hackathon, Business Venture Arena competitions, & 305 Excel Data Duel registration</strong> and participation validation
             </span>
           </li>
 
