--- a/home.html
+++ b/home.html
@@ -476,14 +476,15 @@
             <span class="h-2 w-2 cc-blue rounded-full mr-3 mt-2"></span>
             <span>
               <strong>Certificates</strong> for hackathons, Business Venture Arena competitions,
-              winners, Event participants, and verified members
+              winners, event participants, and verified members
             </span>
           </li>
 
           <li class="flex items-start">
             <span class="h-2 w-2 cc-blue rounded-full mr-3 mt-2"></span>
             <span>
-              <strong>Triathlon Registration — Hackathon, Business Venture Arena competitions, & 305 Excel Data Duel registration</strong> and participation validation
+              <strong>Triathlon Registration (3 events in 1)</strong> — Hackathon, Business Venture Arena competitions,
+              & 305 Excel Data Duel registration + participation validation
             </span>
           </li>
 
@@ -520,8 +521,56 @@
             Your email acts as your unique identifier across memberships,
             hackathons, leadership, and volunteering.
           </p>
+
+          <!-- Quick Links -->
+          <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 gap-3">
+            <a
+              href="https://codecrunchglobal.vercel.app/hacks-toolkit.html"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="inline-flex items-center justify-center gap-2 border border-gray-200 bg-white text-gray-900 px-4 py-3 rounded-md font-bold hover:bg-gray-100 transition-colors text-decoration-none"
+              aria-label="Open Hacker Guide"
+            >
+              <i class="fas fa-book" aria-hidden="true"></i>
+              Hacker Guide
+            </a>
+
+            <a
+              href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="inline-flex items-center justify-center gap-2 border border-gray-200 bg-white text-gray-900 px-4 py-3 rounded-md font-bold hover:bg-gray-100 transition-colors text-decoration-none"
+              aria-label="Open Hack University Calendar & Zoom links"
+            >
+              <i class="fas fa-calendar-alt" aria-hidden="true"></i>
+              Calendar & Zoom
+            </a>
+
+            <a
+              href="https://codecrunchglobal.vercel.app/hackathons.html"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="inline-flex items-center justify-center gap-2 border border-gray-200 bg-white text-gray-900 px-4 py-3 rounded-md font-bold hover:bg-gray-100 transition-colors text-decoration-none"
+              aria-label="Open Triathlon Registration (3 events in 1)"
+            >
+              <i class="fas fa-flag-checkered" aria-hidden="true"></i>
+              Triathlon Registration
+            </a>
+
+            <a
+              href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners.html"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="inline-flex items-center justify-center gap-2 border border-gray-200 bg-white text-gray-900 px-4 py-3 rounded-md font-bold hover:bg-gray-100 transition-colors text-decoration-none"
+              aria-label="Open Hackathon Winners"
+            >
+              <i class="fas fa-trophy" aria-hidden="true"></i>
+              Hackathon Winners
+            </a>
+          </div>
         </div>
 
+        <!-- Primary CTA -->
         <a
           href="https://codecrunch-onestopform.vercel.app"
           target="_blank"
@@ -537,6 +586,7 @@
     </div>
   </div>
 </section>
+
 
 
    
