--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -284,7 +284,7 @@
               <i class="fa-solid fa-book"></i> Open Hacker Guide
             </a>
             <a class="btn btn-primary" href="https://hackuniversityplatforms.vercel.app/" target="_blank">
-              <i class="fa-brands fa-discord"></i> Join Discord / GroupMe / IG
+              <i class="fa-brands fa-discord"></i> Join Discord / GroupMe / IG Group
             </a>
             <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank">
               <i class="fa-regular fa-file-pdf"></i> Membership Certificates
