--- a/home.html
+++ b/home.html
@@ -439,153 +439,126 @@
 
 
 
-<!-- Membership, Certificates & OneStopForm Section -->
+<!-- All-In-One Student Access -->
 <section id="membership" class="py-16 bg-white">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 
-    <!-- Section Title -->
-    <div class="text-center mb-10">
+    <!-- Section Header -->
+    <div class="text-center mb-12">
       <h2 class="text-3xl font-bold mb-4 cc-blue-text">
-        All-In-One Student Access <span class="star"></span>
+        All-In-One Student Access
       </h2>
-
       <p class="text-gray-700 max-w-3xl mx-auto">
-        OneStopForm is the centralized system for memberships, certificates, hackathons,
-        leadership applications, and student volunteering.
+        OneStopForm is the centralized system for memberships, certificates,
+        hackathons, leadership applications, and student volunteering.
       </p>
     </div>
 
-    <!-- Content Grid -->
+    <!-- Cards -->
     <div class="grid md:grid-cols-2 gap-8">
 
-      <!-- Left: Description -->
-      <div class="bg-gray-50 p-6 rounded-lg">
-        <h3 class="text-2xl font-bold mb-4 cc-blue-text">
-          Student Access
-        </h3>
-
-        <ul class="space-y-3 text-gray-700">
-          <li class="flex items-start">
-            <span class="h-2 w-2 cc-blue rounded-full mr-3 mt-2"></span>
-            <span>
-              <strong>Membership</strong> for Code Crunch and partner organizations
-            </span>
-          </li>
-
-          <li class="flex items-start">
-            <span class="h-2 w-2 cc-blue rounded-full mr-3 mt-2"></span>
-            <span>
-              <strong>Certificates</strong> for hackathons, Business Venture Arena competitions,
-              winners, event participants, and verified members
-            </span>
-          </li>
-
-          <li class="flex items-start">
-            <span class="h-2 w-2 cc-blue rounded-full mr-3 mt-2"></span>
-            <span>
-              <strong>Triathlon Registration (3 events in 1)</strong> — Hackathon, Business Venture Arena competitions,
-              & 305 Excel Data Duel registration + participation validation
-            </span>
-          </li>
-
-          <li class="flex items-start">
-            <span class="h-2 w-2 cc-blue rounded-full mr-3 mt-2"></span>
-            <span>
-              <strong>Student leadership applications</strong>
-              (Executive Board & program teams)
-            </span>
-          </li>
-
-          <li class="flex items-start">
-            <span class="h-2 w-2 cc-blue rounded-full mr-3 mt-2"></span>
-            <span>
-              <strong>Student volunteer onboarding</strong> and verification
-            </span>
-          </li>
-        </ul>
-      </div>
-
-      <!-- Right: CTA -->
+      <!-- LEFT CARD: Access OneStopForm -->
       <div class="bg-gray-50 p-6 rounded-lg flex flex-col justify-between">
         <div>
           <h3 class="text-2xl font-bold mb-4 cc-blue-text">
             Access OneStopForm
           </h3>
 
-          <p class="text-gray-700 mb-4">
-            Use the same email across all Code Crunch and Hack University events
-            to verify your records and download certificates.
-          </p>
+          <ul class="space-y-3 text-gray-700">
+            <li class="flex items-start">
+              <span class="h-2 w-2 cc-blue rounded-full mr-3 mt-2"></span>
+              <span><strong>Membership</strong> for Code Crunch and partner organizations</span>
+            </li>
 
-          <p class="text-sm text-gray-600">
-            Your email acts as your unique identifier across memberships,
-            hackathons, leadership, and volunteering.
-          </p>
+            <li class="flex items-start">
+              <span class="h-2 w-2 cc-blue rounded-full mr-3 mt-2"></span>
+              <span>
+                <strong>Certificates</strong> for hackathons, Business Venture Arena competitions,
+                winners, participants, and verified members
+              </span>
+            </li>
 
-          <!-- Quick Links -->
-          <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 gap-3">
-            <a
-              href="https://codecrunchglobal.vercel.app/hacks-toolkit.html"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="inline-flex items-center justify-center gap-2 border border-gray-200 bg-white text-gray-900 px-4 py-3 rounded-md font-bold hover:bg-gray-100 transition-colors text-decoration-none"
-              aria-label="Open Hacker Guide"
-            >
-              <i class="fas fa-book" aria-hidden="true"></i>
-              Hacker Guide
-            </a>
+                <li class="flex items-start">
+                <span class="h-2 w-2 cc-blue rounded-full mr-3 mt-2"></span>
+                <span>
+                    <strong>Triathlon Registration (3-in-1)</strong>
+                    <span class="ml-2 inline-block text-xs font-semibold px-2 py-0.5 rounded-full bg-blue-100 cc-blue-text">
+                    Monthly
+                    </span>
+                    <br class="sm:hidden">
+                    — Hackathons, Business Venture Arena, & 305 Excel Data Duel
+                </span>
+                </li>
 
-            <a
-              href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="inline-flex items-center justify-center gap-2 border border-gray-200 bg-white text-gray-900 px-4 py-3 rounded-md font-bold hover:bg-gray-100 transition-colors text-decoration-none"
-              aria-label="Open Hack University Calendar & Zoom links"
-            >
-              <i class="fas fa-calendar-alt" aria-hidden="true"></i>
-              Calendar & Zoom
-            </a>
 
-            <a
-              href="https://codecrunchglobal.vercel.app/hackathons.html"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="inline-flex items-center justify-center gap-2 border border-gray-200 bg-white text-gray-900 px-4 py-3 rounded-md font-bold hover:bg-gray-100 transition-colors text-decoration-none"
-              aria-label="Open Triathlon Registration (3 events in 1)"
-            >
-              <i class="fas fa-flag-checkered" aria-hidden="true"></i>
-              Triathlon Registration
-            </a>
+            <li class="flex items-start">
+              <span class="h-2 w-2 cc-blue rounded-full mr-3 mt-2"></span>
+              <span><strong>Student leadership applications</strong> (E-Board & program teams)</span>
+            </li>
 
-            <a
-              href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners.html"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="inline-flex items-center justify-center gap-2 border border-gray-200 bg-white text-gray-900 px-4 py-3 rounded-md font-bold hover:bg-gray-100 transition-colors text-decoration-none"
-              aria-label="Open Hackathon Winners"
-            >
-              <i class="fas fa-trophy" aria-hidden="true"></i>
-              Hackathon Winners
-            </a>
-          </div>
+            <li class="flex items-start">
+              <span class="h-2 w-2 cc-blue rounded-full mr-3 mt-2"></span>
+              <span><strong>Student volunteer onboarding</strong> and verification</span>
+            </li>
+          </ul>
         </div>
 
-        <!-- Primary CTA -->
+        <!-- CTA -->
         <a
           href="https://codecrunch-onestopform.vercel.app"
           target="_blank"
           rel="noopener noreferrer"
           class="mt-6 inline-flex items-center justify-center gap-2 cc-blue text-white px-6 py-3 rounded-md font-bold hover:bg-blue-700 transition-colors text-decoration-none"
-          aria-label="Open Code Crunch OneStopForm"
         >
-          <i class="fas fa-clipboard-list" aria-hidden="true"></i>
+          <i class="fas fa-clipboard-list"></i>
           Go to OneStopForm
+        </a>
+      </div>
+
+      <!-- RIGHT CARD: Quick Links -->
+      <div class="bg-gray-50 p-6 rounded-lg flex flex-col justify-between">
+        <div>
+          <h3 class="text-2xl font-bold mb-4 cc-blue-text">
+            Quick Links
+          </h3>
+
+          <p class="text-gray-700 mb-6">
+            Fast access to commonly used resources for participants, hackers,
+            and community members.
+          </p>
+
+          <div class="grid grid-cols-2 gap-4">
+            <a class="border rounded-md px-4 py-3 font-medium hover:bg-gray-100 text-center" href="#">
+              📘 Hacker Guide
+            </a>
+            <a class="border rounded-md px-4 py-3 font-medium hover:bg-gray-100 text-center" href="#">
+              📅 Calendar & Zoom
+            </a>
+            <a class="border rounded-md px-4 py-3 font-medium hover:bg-gray-100 text-center" href="#">
+              🏁 Triathlon Registration <br>(3-in-1)
+            </a>
+            <a class="border rounded-md px-4 py-3 font-medium hover:bg-gray-100 text-center" href="#">
+              🏆 Hackathon Winners Certificates
+            </a>
+          </div>
+        </div>
+
+        <!-- Community Platforms CTA -->
+        <a
+          href="https://hackuniversityplatforms.vercel.app/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="mt-6 inline-flex items-center justify-center gap-2 cc-orange cc-blue-text px-6 py-3 rounded-md font-bold hover:bg-yellow-400 transition-colors text-decoration-none"
+        >
+          <i class="fas fa-users"></i>
+          Join Discord • GroupMe • Instagram Group
         </a>
       </div>
 
     </div>
   </div>
 </section>
+
 
 
 
