--- a/home.html
+++ b/home.html
@@ -262,6 +262,35 @@
                 right: -100vw;
             }
         }
+
+
+
+
+        /* Google Calendar Responsive Embed */
+            .calendar-wrapper {
+            position: relative;
+            width: 100%;
+            max-width: 1000px;
+            margin: 0 auto;
+            border-radius: 16px;
+            overflow: hidden;
+            border: 1px solid #e5e7eb;
+            background: #ffffff;
+            }
+
+            .calendar-iframe {
+            width: 100%;
+            height: 600px;
+            border: 0;
+            }
+
+            /* Mobile adjustments */
+            @media (max-width: 640px) {
+            .calendar-iframe {
+                height: 500px;
+            }
+            }
+
     </style>
 </head>
 
@@ -669,6 +698,41 @@
             </div>
         </section>
 
+
+
+                <!-- Embedded Google Calendar -->
+                <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mb-20">
+                <div class="bg-white rounded-2xl p-6 shadow-lg border border-gray-200">
+
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2 text-center">
+                    Live Hack University Google Calendar
+                    </h2>
+
+                    <p class="text-sm text-gray-600 text-center mb-6 max-w-3xl mx-auto">
+                    Use this live <strong>Google Calendar</strong> view — and cross-check with the
+                    <strong>Luma Calendar</strong> — to confirm that a Hack University event is
+                    <strong>happening now or starting soon</strong> before clicking
+                    <strong>“Join Zoom Meeting.”</strong>
+                    </p>
+
+                    <div class="calendar-wrapper">
+                    <iframe
+                        title="Hack University Google Calendar"
+                        src="https://calendar.google.com/calendar/embed?src=84c4d650450597c592e74e8f5fe851301f60a92f30bb593680999781dfacab12%40group.calendar.google.com&ctz=America%2FNew_York"
+                        class="calendar-iframe"
+                        loading="lazy"
+                        scrolling="no">
+                    </iframe>
+                    </div>
+
+                    <p class="text-xs text-gray-500 text-center mt-4">
+                    Events shown in Eastern Time (ET). You can add this calendar to your Google account.
+                    </p>
+
+                </div>
+                </section>
+
+
         <!-- Join Us Section -->
         <section id="join" class="py-16 bg-white">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -726,7 +790,7 @@
                                     <span class="font-bold">Free Membership.</span>
                                 </p>
                                 <p class="text-sm text-gray-500">
-                                    Questions about membership? Message us on <a href="https://www.linkedin.com/company/code-crunch-club" target="_blank" class="text-blue-600 hover:underline font-medium">LinkedIn</a> or DM us on <a href="https://codecrunchglobal.vercel.app/community-access.html" class="text-blue-600 hover:underline font-medium">Discord @codecrunchclub</a>
+                                    Questions about membership? Message us on <a href="https://www.linkedin.com/company/code-crunch-club" target="_blank" class="text-blue-600 hover:underline font-medium">LinkedIn</a> </a>
                                 </p>
                             </div>
                         </div>
