--- a/hackuniversity-hackathons.html
+++ b/hackuniversity-hackathons.html
@@ -688,7 +688,7 @@
   // },
 
   {
-    name: 'ColorStack Winter Hackathon (Available to National ColorStack Members Only)',
+    name: 'ColorStack Winter Hackathon (Available to U.S. National ColorStack Members Only)',
 
     startDate: '2025-12-19',
     endDate: '2026-01-12',
