--- a/colorstackwinterhack2025.html
+++ b/colorstackwinterhack2025.html
@@ -131,18 +131,47 @@
     </div>
   </section>
 
-  <!-- ABOUT -->
-  <section class="bg-blue-50">
-    <div class="max-w-4xl mx-auto px-6 py-16 text-center">
-      <h2 class="text-2xl md:text-3xl font-semibold text-blue-900">Build • Collaborate • Innovate</h2>
-      <p class="mt-4 text-lg text-gray-700 leading-relaxed">
-        Beginners and experienced hackers welcome. Learn, create, and ship projects with the ColorStack community.
-      </p>
-      <a href="https://codecrunchglobal.vercel.app/colorstackwinterhack2025-guide.html" class="inline-block mt-6 bg-blue-700 hover:bg-blue-900 text-white px-6 py-3 rounded-lg font-semibold transition">
-       Hacker Guide
+ <!-- ABOUT -->
+<section class="bg-blue-50">
+  <div class="max-w-4xl mx-auto px-6 py-16 text-center">
+    <h2 class="text-2xl md:text-3xl font-semibold text-blue-900">Build • Collaborate • Innovate</h2>
+
+    <p class="mt-4 text-lg text-gray-700 leading-relaxed">
+      Beginners and experienced hackers welcome. Learn, create, and ship projects with the ColorStack community.
+    </p>
+
+    <div class="mt-6 flex flex-col sm:flex-row sm:justify-center gap-3">
+      <a
+        href="https://colorstack-family.slack.com/archives/C084ZCYQ50C/p1765822495647099"
+        class="inline-block bg-blue-700 hover:bg-blue-900 text-white px-6 py-3 rounded-lg font-semibold transition"
+      >
+        Register Now
+      </a>
+
+      <a
+        href="https://colorstack-family.slack.com/archives/C084ZCYQ50C/p1765833689585929"
+        class="inline-block bg-blue-700 hover:bg-blue-900 text-white px-6 py-3 rounded-lg font-semibold transition"
+      >
+        Hackathon Agenda
+      </a>
+
+            <a
+        href="https://colorstack-family.slack.com/archives/C084ZCYQ50C/p1766178267558839"
+        class="inline-block bg-blue-700 hover:bg-blue-900 text-white px-6 py-3 rounded-lg font-semibold transition"
+      >
+        Project Submission Portal
+      </a>
+
+      <a
+        href="https://codecrunchglobal.vercel.app/colorstackwinterhack2025-guide.html"
+        class="inline-block bg-blue-700 hover:bg-blue-900 text-white px-6 py-3 rounded-lg font-semibold transition"
+      >
+        Hacker Guide
       </a>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- OVERVIEW -->
   <section class="py-16 bg-white" id="overview">
