--- a/colorstackwinterhack2025-guide.html
+++ b/colorstackwinterhack2025-guide.html
@@ -112,7 +112,7 @@
       <h3 class="text-2xl font-semibold text-gray-900">1. Create Your GitHub Repository</h3>
       <p class="mt-4 text-gray-700 leading-relaxed">
         Create a public GitHub repository named:
-        <strong>colorstackwinterhack2025-[projectname]</strong><br><br>
+        <strong>colorstackwinterhack2025-[projectname or team name]</strong><br><br>
         Your repository must include:
       </p>
 
@@ -165,7 +165,7 @@
       </p>
 
       <ul class="mt-3 space-y-2 text-gray-700">
-        <li>• Project title & description</li>
+        <li>• Project title: <strong>colorstackwinterhack2025-[projectname or team name]</strong><br><br> & description</li>
         <li>• How your project aligns with solving the chosen problem</li>
         <li>• Technologies used</li>
         <li>• Setup & installation instructions</li>
