--- a/2026-305hackjan2026.html
+++ b/2026-305hackjan2026.html
@@ -1068,7 +1068,7 @@
 <script>
   // ===== CONFIG TOGGLE FLAGS =====
   const CONFIG = {
-    mlhEnabled: false,          // true when MLH registration is ready
+    mlhEnabled: true,          // true when MLH registration is ready
     bevyEnabled: true,          // hide/show Bevy buttons
     kickoffAEnabled: true,      // show/hide Kickoff Session A button
     kickoffBEnabled: true,      // show/hide Kickoff Session B button
@@ -1088,7 +1088,7 @@
     perks: 'https://hackuniversity-perks.vercel.app/',
     hackerGuide: 'https://hackuniversity-hackerguide.vercel.app',
     discordServer: 'https://hackuniversity-discord.vercel.app/',
-    mlh: 'https://codecrunchglobal.vercel.app/comingsoon/coming-soon.html',
+    mlh: 'https://events.mlh.io/events/13482-305-hackathon-january-2026-hackdays-triathlon-registration-3-in-1-monthly-hackathon-business-venture-arena-305-excel-data-duel?_gl=1*16lmq5y*_ga*MTEyOTU1NTYzNS4xNzQ1NTMxMjM1*_ga_E5KT6TC4TK*czE3NjcyMzAzNDMkbzEzMiRnMSR0MTc2NzIzNjIzMyRqNTIkbDAkaDA.',
     instagramGroup: 'https://hackuniversityplatforms.vercel.app/',
     groupme: 'https://hackuniversityplatforms.vercel.app/',
     hackerGuide: 'https://hackuniversity-hackerguide.vercel.app',
