--- a/home.html
+++ b/home.html
@@ -814,8 +814,8 @@
                 <div class="mb-8 bg-gradient-to-r from-blue-500 to-blue-700 rounded-lg shadow-lg p-6 text-white">
                     <div class="flex flex-col md:flex-row items-center justify-between">
                         <div class="mb-4 md:mb-0 md:mr-6">
-                            <h3 class="text-2xl font-bold mb-2">7 Hacks: Code Crunch GLOBAL x ColorStack @ FIU x CAHSI @ FIU</h3>
-                            <p class="text-lg mb-2">Join our series of 7 hackathons designed to challenge and inspire students across multiple disciplines!</p>
+                            <h3 class="text-2xl font-bold mb-2">7 Hacks: Code Crunch GLOBAL x Google Deveoper Group at FIU x ColorStack @ FIU x CAHSI @ FIU x Raspberry Pi Code Crunch</h3>
+                            <p class="text-lg mb-2">Join our series 3-1 hackathons (Problem Solving Events) designed to challenge and inspire students across multiple disciplines!</p>
                             <p class="font-medium mb-2">Open to ALL majors and ANY skill level</p>
                             <ul class="list-disc list-inside opacity-90 mb-4">
                                 <li>No coding experience required</li>
@@ -825,7 +825,7 @@
                             
                             <!-- Simple text list of tracks -->
                             <div class="mt-4">
-                                <p class="font-medium mb-2">Specialized Tracks:</p>
+                                <p class="font-medium mb-2">Specialized Competitions:</p>
                                 <p class="text-sm">
                                     Engineering: Civil, Electrical, Mechanical, Biomedical<br>
                                     Business: Finance, Marketing, Management, Entrepreneurship<br>
